--- a/client/src/components/auth/user-profile.css
+++ b/client/src/components/auth/user-profile.css
@@ -1,5 +1,15 @@
 
 .user-profile {
-	font-size: 20px;
+	font-size: 24px;
+
+	padding: 20px;
 }
 
+.user-profile div{
+	padding: 15px;
+}
+
+.sample-img {
+	width: 200px;
+	height: 200px;
+}
