--- a/client/src/components/catalog/selectionList.css
+++ b/client/src/components/catalog/selectionList.css
@@ -14,3 +14,11 @@
 	color: black;
 	background: lightgreen;
 }
+
+.selection-list label{
+	margin: 10px;
+}
+
+.selection-list div{
+	margin: 10px;
+}
