--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -10,13 +10,13 @@ body {
   padding: 15px;
   margin: 0 auto;
   background-color: rgb(176, 224, 230);
-   border: 1px solid black;
+  border: 1px solid black;
+  margin-bottom: 50px;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
-
 
 .form-signin .form-control {
   position: relative;
@@ -45,11 +45,32 @@ body {
 }
 
 .form-signin label{
- text-align: center;
  margin-bottom: 0;
 }
 
 .container {
   font-family: 'Roboto', sans-serif;
+}
+
+.warning {
+  color: red;
+}
+
+.app-name {
+  font-size: 34px;
+  margin: auto;
+  text-align: center;
+  font-weight: bold;
+  text-shadow: 1px 2px;
+  color: #4CAF50;
+  display: block;
+  margin-bottom: 20px;
+}
+
+#login-form {
+  background-color: rgb(176, 224, 230);
+  margin-bottom: 10px;
+  max-width: 600px;
+  margin-top: 0;
 }
 
