--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,16 +1,9 @@
 
-#home {
-	padding: 20px;
-	font-size: 20px;
-	font-family: 'Lato', sans-serif;
-}
-
-#home h1{
-	margin: auto;
-	text-align: center;
-	font-weight: bold;
-	text-shadow: 1px 2px;
-	color: green;
-	display: block;
-	background-color: azure;
+.mb-0,
+.card-header,
+.card-body,
+.infoBotton {
+	background-color: rgb(176, 224, 230);
+	padding: 0;
+	margin: 0
 }
