--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -4,10 +4,11 @@ html {
   	width: 100%;
   	height: 100%; 
   	min-height: 100%;
-  	background: linear-gradient(90deg,#C8CFD6 5%,transparent 5%,transparent 95%,#C8CFD6 95%,#C8CFD6),
-  				linear-gradient(180deg,#C8CFD6 2%,transparent 5%,transparent 99%,#C8CFD6 100%,#C8CFD6);
+
+  	background: linear-gradient(90deg,#F0F8FF 5%,transparent 5%,transparent 95%,#F0F8FF 95%,#F0F8FF),
+  				      linear-gradient(180deg,#F0F8FF 3%,transparent 0%,transparent 99%,#F0F8FF 100%,#F0F8FF);
   	
-  	padding-top: 30px;
+  	padding-top: 20px;
   	
   	font-size: 18px;
 }
