--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -74,4 +74,9 @@ body {
   max-width: 600px;
   margin-top: 0;
 }
-
+@media (max-width: 575.98px) {
+  html, body {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
