--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -40,8 +40,8 @@ html, body {
 }
 @media (max-width: 575.98px) {
   html, body {
-    margin-top: 10px;
-    padding-top: 10px;
+    margin-top: 0;
+    padding-top: 0;
   }
 }
 
