--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -2,20 +2,20 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #fff;
+  font-family: 'Lato' sans-serif;
 }
 
 
 .form-signin {
   max-width: 330px;
-  padding: 15px;
+  padding: 10px;
   margin: 0 auto;
   background-color: rgb(176, 224, 230);
-  border: 1px solid black;
+  border: 1px solid brown;
   margin-bottom: 50px;
   margin-top: 20px;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signin .form-signin-heading{
   margin-bottom: 10px;
 }
 
@@ -24,7 +24,8 @@ body {
   box-sizing: border-box;
   height: auto;
   padding: 10px;
-  font-size: 16px;
+  font-size: 20px;
+  border: 1px solid brown;
 }
 .form-signin .form-control:focus {
   z-index: 2;
@@ -51,6 +52,7 @@ body {
 
 .container {
   font-family: 'Roboto', sans-serif;
+
 }
 
 .warning {
@@ -73,6 +75,8 @@ body {
   margin-bottom: 10px;
   max-width: 600px;
   margin-top: 0;
+  border: 1px solid brown;
+  font-size: 20px;
 }
 @media (max-width: 575.98px) {
   html, body {
@@ -80,3 +84,52 @@ body {
     padding-top: 0;
   }
 }
+
+@include media-breakpoint-up(sm) {
+  html, body {
+    font-size: 1.2rem;
+    margin-top: 20px;
+    padding-top: 20px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 1.4rem;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (min-width: 768px) 
+  and (orientation: portrait) {
+  html {
+    font-size: 1.4rem;
+  }
+  #login-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+}
+
+@media only screen and (min-width: 992px){
+  #login-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  } 
+}
+
+
+
+
+
+
+
