--- a/client/src/components/auth/user-profile.css
+++ b/client/src/components/auth/user-profile.css
@@ -1,15 +1,12 @@
 
 .user-profile {
 	font-size: 24px;
-
-	padding: 20px;
-}
-
-.user-profile div{
-	padding: 15px;
+	padding: 30px;
+	margin-top: 30px;
 }
 
 .sample-img {
 	width: 200px;
 	height: 200px;
 }
+
