--- a/client/src/components/auth/registration-form.css
+++ b/client/src/components/auth/registration-form.css
@@ -6,9 +6,18 @@
 	padding-bottom: 5px; 
 }
 
+.reg-form {
+  max-width: 600px;
+
+}
+
 .program-selection {
 	border: 1px solid brown;
+  width: 100%;
+}
 
+textarea:focus, input:focus{
+    outline: none;
 }
 
 @media (max-width: 575.98px) {
@@ -44,18 +53,22 @@
   html {
     font-size: 1.4rem;
   }
-  .reg-form {
+
+  .reg-form,
+  .login-form {
     max-width: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); 
   }
+
 }
 
 @media only screen and (min-width: 992px){
-  .reg-form {
-
+  .reg-form,
+  .login-form {
+    max-width: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
