--- a/client/src/components/auth/registration-form.css
+++ b/client/src/components/auth/registration-form.css
@@ -2,7 +2,8 @@
 
 .form-signin {
 	max-width: 600px;
-
+	margin-top: 0;
+	padding-bottom: 5px; 
 }
 
 .reg-form {
@@ -13,15 +14,13 @@
 .program-selection {
 	border: 1px solid brown;
   width: 100%;
-  font-size: 18px;
-  background-color: white;
 }
 
-.validation {
-  color: red;
-}
 textarea:focus, input:focus{
     outline: none;
+}
+.validation {
+  color: red;
 }
 
 @media (max-width: 575.98px) {
