changed background colors

--- a/client/src/components/auth/registration-form.css
+++ b/client/src/components/auth/registration-form.css
@@ -2,31 +2,35 @@
 
 .form-signin {
 	max-width: 600px;
-	margin-top: 0;
-	padding-bottom: 5px; 
+	margin-top: 45px;
 }
 
 .reg-form {
   max-width: 600px;
-
+  height: 100%;
 }
 
 .program-selection {
 	border: 1px solid brown;
-  width: 100%;
+  font-size:18px;
 }
+
 
 textarea:focus, input:focus{
     outline: none;
 }
+
 .validation {
   color: red;
 }
 
-@media (max-width: 575.98px) {
+@media only screen and  (max-width: 575.98px) {
   html, body {
     margin-top: 0;
     padding-top: 0;
+  }
+  .reg-form {
+    width: 100%;
   }
 }
 
