--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #fff;
+  background-color: rgb(229, 228, 226, 0.5);
   font-family: 'Lato' sans-serif;
 }
 
@@ -12,8 +12,9 @@ body {
   margin: 0 auto;
   background-color: rgb(176, 224, 230);
   border: 1px solid brown;
-  margin-bottom: 50px;
+  margin-bottom: 120px;
   margin-top: 20px;
+  height: 100%;
 }
 .form-signin .form-signin-heading{
   margin-bottom: 10px;
@@ -51,7 +52,7 @@ body {
 }
 
 .container {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
 
 }
 
@@ -65,9 +66,9 @@ body {
   text-align: center;
   font-weight: bold;
   text-shadow: 1px 2px;
-  color: #4CAF50;
+  color: #2A52BE;
   display: block;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 #login-form {
@@ -90,7 +91,7 @@ body {
   }
     #login-form {
     margin-bottom: 0;
-    height: 100%;
+    margin-top: 0;
   }
 }
 
