--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -4,7 +4,8 @@ html {
   	width: 100%;
   	height: 100%; 
   	padding-top: 20px;
-  	font-size: 18px;
+    font-size: 18px;
+    font-size: 1rem;
 }
 
 
@@ -15,24 +16,20 @@ html {
 }
 
 .navbar-nav .navbar-nav .nav-link {
-    color: rgba(255,255,255,.5);
-    
+    color: rgba(255,255,255,.5); 
 }
 
 /* change the color of active or hovered links */
 .navbar-nav .nav-item:active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
-    border-bottom: 2px solid black;
-    background-color: lightblue; 
+    border-bottom: 4px solid #fff;
 }
 
 .nav-link:global(.active) {
   background-color: green;
 }
 
-html, body {
-  font-size: 1rem;
-}
+
 @media (max-width: 575.98px) {
   html, body {
     margin-top: 0;
