--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -14,6 +14,7 @@ body {
   border: 1px solid brown;
   margin-bottom: 50px;
   margin-top: 20px;
+
 }
 .form-signin .form-signin-heading{
   margin-bottom: 10px;
@@ -51,8 +52,7 @@ body {
 }
 
 .container {
-  font-family: 'Lato', sans-serif;
-
+  x-overflow: hidden;
 }
 
 .warning {
@@ -91,6 +91,11 @@ body {
     #login-form {
     margin-bottom: 0;
     height: 100%;
+  }
+  .container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
   }
 }
 
