solved four of the five issues

--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -6,6 +6,7 @@ body {
 }
 
 
+
 .form-signin {
   max-width: 330px;
   padding: 10px;
@@ -16,6 +17,7 @@ body {
   margin-top: 20px;
 
 }
+
 .form-signin .form-signin-heading{
   margin-bottom: 10px;
 }
@@ -83,14 +85,17 @@ body {
   max-width: 330px;
 }
 
+
 @media (max-width: 575.98px) {
   html, body {
     margin-top: 0;
     padding-top: 0;
   }
     #login-form {
-    margin-bottom: 0;
     height: 100%;
+    position: absolute;
+    top:0;
+    bottom: 0;
   }
 
 }
