--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -11,7 +11,7 @@ html {
 
 .navbar {
 	background-color: #C8CFD6;
-	font-size: 1.3em;
+	font-size: 1.2em;
 	padding: 5px; 
 }
 
@@ -22,13 +22,8 @@ html {
 /* change the color of active or hovered links */
 .navbar-nav .nav-item:active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
-    border-bottom: 4px solid #fff;
+    background-color: #71f1b8;
 }
-
-.nav-link:global(.activeTab) {
-  border-bottom: 4px solid #fff;
-}
-
 
 
 
