--- a/client/src/components/catalog/checkbox.css
+++ b/client/src/components/catalog/checkbox.css
@@ -11,11 +11,14 @@
 }
 
 .form-check-input{
-	
 	border: 4px solid black;
 	transform: scale(1.5);
 }
 
 .form-check-input + .form-check-label {
 	font-weight: bold;
+}
+
+.strikeOut {
+	padding-left: 20px;
 }
