--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -5,27 +5,28 @@ html {
   	height: 100%; 
   	padding-top: 20px;
     font-size: 18px;
-    font-size: 1rem;
+    font-size: 1rem; 
 }
 
 
 .navbar {
-	background-color: #C8CFD6;
+	background-color: #1976D2;
 	font-size: 1.2em;
 	padding: 5px; 
+
 }
 
 .navbar-nav .navbar-nav .nav-link {
     color: rgba(255,255,255,.5); 
+
 }
 
 /* change the color of active or hovered links */
 .navbar-nav .nav-item:active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
     background-color: #71f1b8;
+
 }
-
-
 
 @media (max-width: 575.98px) {
   html, body {
