change node version in .travis.yml to 9

--- a/client/src/components/catalog/checkboxapp.css
+++ b/client/src/components/catalog/checkboxapp.css
@@ -11,3 +11,9 @@
 .container form{
 	font-size: 20px;
 }
+
+.select-header label {
+	width: 100%;
+	font-weight: bold;
+	background-color: green;
+}
