--- a/client/src/components/acadplan/acadPlansDashboard.css
+++ b/client/src/components/acadplan/acadPlansDashboard.css
@@ -23,8 +23,11 @@
 	padding: 0;
 	font-size: 24px;
 	float: right;
+	border-radius: 50%;
 }
 
-.delete-course:hover {
+.delete-course:hover,
+.delete-course:active,
+.delete-course:focus {
 	background-color: red;
 }
