--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -6,19 +6,19 @@ body {
 }
 
 
-
 .form-signin {
   max-width: 330px;
   padding: 10px;
   margin: 0 auto;
   background-color: rgb(176, 224, 230);
   border: 1px solid brown;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   margin-top: 20px;
 
 }
 
-.form-signin .form-signin-heading{
+.form-signin 
+.form-signin-heading{
   margin-bottom: 10px;
 }
 
@@ -28,9 +28,10 @@ body {
   height: auto;
   padding: 10px;
   font-size: 20px;
-  border: 1px solid brown;
+  
 }
-.form-signin .form-control:focus {
+.form-signin 
+.form-control:focus {
   z-index: 2;
 }
 .form-signin input[type="text"] {
@@ -69,7 +70,7 @@ body {
   text-shadow: 1px 2px;
   color: #4CAF50;
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 #login-form {
@@ -90,21 +91,28 @@ body {
   html, body {
     margin-top: 0;
     padding-top: 0;
+    background-color: rgb(176, 224, 230);
   }
     #login-form {
     height: 100%;
     position: absolute;
     top:0;
     bottom: 0;
-  }
+    border: none;
 
+  }
 }
 
 @include media-breakpoint-up(sm) {
-  html, body {
-    font-size: 1.2rem;
-    margin-top: 20px;
-    padding-top: 20px;
+    html, body {
+      font-size: 1.2rem;
+      margin-top: 20px;
+      padding-top: 20px;
+      background-color: rgb(176, 224, 230);
+    
+  }
+  .home {
+    margin-top: 0;
   }
 
 }
@@ -118,6 +126,7 @@ body {
 @include media-breakpoint-up(lg) {
   html {
     font-size: 1.6rem;
+
   }
 }
 
