--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -21,6 +21,13 @@ html {
 
 }
 
+.navbar-brand {
+text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+  font-size: 1.5em;
+}
+
 /* change the color of active or hovered links */
 .navbar-nav .nav-item:active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
@@ -28,13 +35,7 @@ html {
 
 }
 
-@media (max-width: 575.98px) {
-  html, body {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 0;
-  }
-}
+
 
 @include media-breakpoint-up(sm) {
   html, body {
