--- a/client/src/components/acadplan/acadPlansDashboard.css
+++ b/client/src/components/acadplan/acadPlansDashboard.css
@@ -15,18 +15,41 @@
 }
 
 .list-group-item {
-	padding-top: 10px;
+	padding: 10px;
+
 }
 
 .delete-course{
-	padding: 0;
-	font-size: 24px;
-	float: right;
+	margin-left: 20px;
+	text-align: left;
 	border-radius: 50%;
+	font-size: 1.5em;
+
 }
 
 .delete-course:hover,
 .delete-course:active,
 .delete-course:focus {
 	background-color: red;
+}
+
+li {
+  padding: 5px;
+  font-size: 18px;
+  margin-left: 5px;
+  text-align: left;
+}
+
+@media only screen and (min-width: 768px) {
+	.semester-plan-container:nth-child(odd) {
+		width: 49%;
+		float: left;
+		margin-right: 5px;
+	
+	}
+	.semester-plan-container:nth-child(even) {
+		width: 49%;
+		float: right;
+		margin-left: 5px;
+	}
 }
