--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -35,7 +35,7 @@ body {
   z-index: 2;
 }
 .form-signin input[type="text"] {
-  margin-bottom: -1px;
+
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -74,7 +74,7 @@ body {
 }
 
 #login-form {
-  background-color: rgb(176, 224, 230);
+  background-color: #fff;
   margin-bottom: 10px;
   max-width: 600px;
   margin-top: 0;
@@ -91,7 +91,7 @@ body {
   html, body {
     margin-top: 0;
     padding-top: 0;
-    background-color: rgb(176, 224, 230);
+    background-color: #fff;
   }
     #login-form {
     height: 100%;
@@ -101,6 +101,7 @@ body {
     border: none;
 
   }
+
 }
 
 @include media-breakpoint-up(sm) {
@@ -108,7 +109,7 @@ body {
       font-size: 1.2rem;
       margin-top: 20px;
       padding-top: 20px;
-      background-color: rgb(176, 224, 230);
+      background-color: #fff;
     
   }
   .home {
