--- a/client/src/components/auth/registration-form.css
+++ b/client/src/components/auth/registration-form.css
@@ -16,13 +16,6 @@
   margin-right: 20px;
 }
 
-select.program-selection:not([size]):not([multiple]) {
-    height: calc(1.8rem + 2px);
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-right: 15px;
-}
 
 .program-selection{
   width: 100%;
@@ -31,6 +24,16 @@ select.program-selection:not([size]):not([multiple]) {
   padding-right: 15px;
 }
 
+.app-name {
+  font-size: 34px;
+  margin: auto;
+  text-align: center;
+  font-weight: bold;
+  text-shadow: 1px 2px;
+  color: #4CAF50;
+  display: block;
+  margin-bottom: 15px;
+}
 
 
 textarea:focus, input:focus{
