--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,10 +1,15 @@
 
 
-
+.home-page {
+	background-color: #fff;
+}
 .home {
 	font-size: 20px;
-	position: relative;
-	margin-top: 60px;
 	border: none;
+	padding-top: 30px;
+	margin: 10px;
 }
 
+.home ol {
+	margin-left: 30px;
+}
