--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,58 +1,206 @@
-body,
-html {
-  	display: table;
-  	width: 100%;
-  	height: 100%; 
-  	padding-top: 20px;
-    font-size: 18px;
-    font-size: 1rem; 
+
+body, html {
+  font-size: 20px;
+  font-family: 'Lato' sans-serif;
 }
 
-
-.navbar {
-	background-color: #1976D2;
-	font-size: 1.2em;
-	padding: 5px; 
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.navbar-nav .navbar-nav .nav-link {
-    color: rgba(255,255,255,.5); 
-
+.row {
+  max-width: 1000px;
+  padding: 0 20px;
+  margin: 0 auto;
 }
 
-.navbar-brand {
-text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);
-  font-size: 1.5em;
+.row::before,
+.row::after {
+  display: table;
+  content: '';
 }
 
-/* change the color of active or hovered links */
-.navbar-nav .nav-item:active .nav-link,
-.navbar-nav .nav-item:hover .nav-link {
-    background-color: #71f1b8;
-
+.row::after {
+  clear: both;
 }
 
+.col-3, .col-4, .col-6, .col-12 {
+  float:left;
+  padding-left: 1.04166666%;
+    padding-right: 1.04166666%;
+}
 
+.col-2, .col-3, .col-4, col-6, .col-12 {
+  width: 100%;
+}
 
-@include media-breakpoint-up(sm) {
-  html, body {
-    font-size: 1.2rem;
-    margin-top: 20px;
-    padding-top: 20px;
+@media only screen and (min-width: 320px) {
+  .col-2 {
+    width: 16.6666666667%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.3333333%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-12 {
+    width: 100%;
   }
 }
 
-@include media-breakpoint-up(md) {
-  html {
-    font-size: 1.4rem;
+.container {
+  width: 100%;
+  position: absolute;
+  top:0;
+  left: 0;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #007bff!important;
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  border: 1px solid black;
+  vertical-align: middle;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 0 auto;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; 
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+.topnav .icon {
+  display: none;
+}
+
+
+button {
+  border: 1px solid white;
+  border-radius: 2px;
+  height: 36px;
+  font-size: 30px;
+  vertical-align: middle;
+  text-align: center;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+              0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+              0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  font-size: 24px;
+  font-weight: bold;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  line-height: 1.3em;
+  background-color: #007bff;
+  margin: 5px;
+  padding:  5px;
+  color: white;
+}
+
+input,
+select,
+label {
+  font-size: 20px;
+  margin-lef: 10px;
+
+  padding-top: 10px;
+
+  line-height: 1.4em;
+  vertical-align: middle;
+}
+
+li {
+  padding: 5px;
+  font-size: 18px;
+  margin-left: 5px;
+  text-align: left;
+
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+      position: absolute;
+    }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: white;
+    color: black;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
 
-@include media-breakpoint-up(lg) {
-  html {
-    font-size: 1.6rem;
-  }
+.app-name a {
+  font-size: 28px;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgb(255, 255, 255);
 }
+
+
+
+
+
+
+
+
+
