--- a/client/src/components/catalog/inputGroupList.css
+++ b/client/src/components/catalog/inputGroupList.css
@@ -3,6 +3,15 @@
 #input-group-list {
 	border: 1px solid black;
 	margin-top: 10px;
-
+	width: 100%;
 	background-color: #fff;
+	text-align: center;
+	margin: 0 auto;
+}
+
+#input-group-list input,
+#input-group-list select {
+	display: block;
+	width: 50%;
+	margin: 5px auto;
 }
