--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -29,7 +29,7 @@ body, html {
 .col-3, .col-4, .col-6, .col-12 {
   float:left;
   padding-left: 1.04166666%;
-    padding-right: 1.04166666%;
+  padding-right: 1.04166666%;
 }
 
 .col-2, .col-3, .col-4, col-6, .col-12 {
@@ -79,12 +79,14 @@ body, html {
   display: block;
   color: #fff;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 16px;
   text-decoration: none;
   font-size: 20px;
   margin: 0 auto;
+  vertical-align: middle;
 }
-.topnav a:hover {
+.topnav a:hover,
+.topnav a:focus {
   background-color: #ddd;
   color: black;
 }
@@ -114,13 +116,14 @@ ul {
   background-color: #4CAF50;
   color: white;
 }
+
 .topnav .icon {
   display: none;
 }
 
 
 button {
-  border: 1px solid white;
+  border: 1px solid #0066cc;
   border-radius: 2px;
   height: 36px;
   font-size: 30px;
@@ -137,8 +140,22 @@ button {
   line-height: 1.3em;
   background-color: #007bff;
   margin: 5px;
-  padding:  5px;
+  padding: 0 15px;
   color: white;
+}
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+button:hover,
+button:focus {
+  border: 1px solid #0099cc;
+  background-color: #00aacc;
+  color: #ffffff;
 }
 
 input,
@@ -146,11 +163,16 @@ select,
 label {
   font-size: 20px;
   margin-lef: 10px;
-
   padding-top: 10px;
-
   line-height: 1.4em;
   vertical-align: middle;
+}
+
+input,
+select {
+  border: 1px solid black;
+  margin: 5px;
+  padding: 5px;
 }
 
 li {
@@ -161,16 +183,38 @@ li {
 
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+
+@media only screen and (min-width: 320px) {
+  .col-2 {
+    width: 16.6666666667%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.3333333%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 775px)  {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .nav-menu a {
+    display: none;
+  }
+
   .topnav a.icon {
     float: right;
     display: block;
   }
-
-}
-
-@media screen and (max-width: 600px) {
   .topnav.responsive {
       position: absolute;
     }
@@ -188,14 +232,27 @@ li {
     display: block;
     text-align: left;
   }
+
+  .home {
+    margin-top: 30px;
+  }
 }
 
-.app-name a {
-  font-size: 28px;
-  font-weight: bold;
-  text-shadow: 0 1px 0 rgb(255, 255, 255);
+.app-header a{
+  height: 45px;
+  display: block;
+
+  font-size: 40px;
+  padding: 0;
+  vertical-align: middle;
+  color: rgba(0,0,0,0.6);
+  text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
+                 0px -5px 35px rgba(255,255,255,0.3);
 }
 
+.nav-menu {
+  float: right;
+}
 
 
 
