--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Lato' sans-serif;
 }
 
+.login {
+  padding: 0;
+  margin: 0;
+}
 
 .form-signin {
   max-width: 330px;
@@ -13,9 +17,10 @@ body {
   background-color: rgb(176, 224, 230);
   border: 1px solid brown;
   margin-bottom: 20px;
-  margin-top: 20px;
-
+  margin-top: 10px;
+  text-align: center;
 }
+
 
 .form-signin 
 .form-signin-heading{
