--- a/client/src/components/auth/user-profile.css
+++ b/client/src/components/auth/user-profile.css
@@ -11,3 +11,14 @@
 	height: 200px;
 }
 
+@media only screen and (min-width: 768px) {
+	.profile {
+		width: 50%;
+		float: left;
+	}
+	.photo {
+		width: 50%;
+		float: right;
+		text-align: right;
+	}
+}
