--- a/client/src/components/acadplan/acadPlansDashboard.css
+++ b/client/src/components/acadplan/acadPlansDashboard.css
@@ -23,14 +23,20 @@
 	margin-left: 20px;
 	text-align: left;
 	border-radius: 50%;
-	font-size: 1.5em;
-
+	height: 30px;
+	width: 30px;
+	font-size: 30px;
+	line-height: 30px;
+	text-align: center;
+	float: right;
+	font-family: 'Roboto', sans-serif;
+	
 }
 
 .delete-course:hover,
 .delete-course:active,
 .delete-course:focus {
-	background-color: red;
+	background-color: tomato;
 }
 
 li {
@@ -40,7 +46,7 @@ li {
   text-align: left;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 775px) {
 	.semester-plan-container:nth-child(odd) {
 		width: 49%;
 		float: left;
