--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -58,17 +58,16 @@ body, html {
 .container {
   width: 100%;
   position: fixed;
-
   top:0;
   left: 0;
   margin: 0 auto;
   text-align: center;
-  background-color: #007bff!important;
+  background-color: #1E90FF!important;
 }
 
 .topnav {
   overflow: hidden;
-  background-color: #007bff!important;
+  background-color: #1E90FF!important;
   text-align: center;
   width: 100%;
   display: block;
@@ -244,10 +243,10 @@ li {
   height: 45px;
   display: block;
 
-  font-size: 40px;
+  font-size: 32px;
   padding: 0;
   vertical-align: middle;
-  color: rgba(0,0,0,0.6);
+  color: #4B0082;
   text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                  0px -5px 35px rgba(255,255,255,0.3);
 }
