--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -2,16 +2,17 @@
 
 .home-page {
 	background-color: #fff;
-	margin-top: 0;
+	margin-top: 20px;
+
 }
 
 .home {
 	font-size: 20px;
 	border: none;
-	padding-top: 25px;
-	margin: 10px;
+	padding-top: 30px;
+	
 }
 
 .home ol {
-	margin-left: 30px;
+	margin-left: 20px;
 }
