--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -56,6 +56,7 @@ body {
 
 .form-signin label{
  margin-bottom: 0;
+ text-align: left;
 }
 
 .container {
@@ -80,6 +81,7 @@ body {
 #form-signin {
   max-width: 330px;
 }
+
 
 .login-app {
   width: 100%;
