--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -18,9 +18,12 @@ body {
   border: 1px solid brown;
   margin-bottom: 20px;
   margin-top: 10px;
-  text-align: center;
 }
 
+.form-signin button {
+  margin: 10px auto;
+  display: block;
+}
 
 .form-signin 
 .form-signin-heading{
@@ -54,6 +57,7 @@ body {
   margin-top: 0;
 }
 
+
 .form-signin label{
  margin-bottom: 0;
  text-align: left;
@@ -67,12 +71,12 @@ body {
   color: red;
 }
 
-
-
 #login-form {
   background-color: #fff;
   margin-bottom: 10px;
   max-width: 600px;
+  position: absolute;
+  top: 0;
   margin-top: 0;
   border: 1px solid brown;
   font-size: 20px;
@@ -104,7 +108,7 @@ body {
 
 
 
-@media (max-width: 575.98px) {
+@media all screen and (min-width: 575.98px) {
   html, body {
     margin-top: 0;
     padding-top: 0;
@@ -121,30 +125,6 @@ body {
 
 }
 
-@include media-breakpoint-up(sm) {
-    html, body {
-      font-size: 1.2rem;
-      margin-top: 20px;
-      padding-top: 20px;
-      background-color: #fff;
-    
-  }
-
-
-}
-
-@include media-breakpoint-up(md) {
-  html {
-    font-size: 1.4rem;
-  }
-}
-
-@include media-breakpoint-up(lg) {
-  html {
-    font-size: 1.6rem;
-
-  }
-}
 
 @media only screen and (min-width: 768px) 
   and (orientation: portrait) {
