--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,53 @@ body {
   background-color: #E9E7DA;
   font-size: 18px;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  max-width: 1000px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.row::before,
+.row::after {
+  display: table;
+  content: '';
+}
+
+.row::after {
+  clear: both;
+}
+
+.col-3, .col-4, .col-6, .col-12 {
+  float:left;
+  padding-left: 1.04166666%;
+  padding-right: 1.04166666%;
+}
+
+.col-2, .col-3, .col-4, col-6, .col-12 {
+  width: 100%;
+}
+
+@media only screen and (min-width: 320px) {
+  .col-2 {
+    width: 16.6666666667%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.3333333%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
