added padding space to Home component

--- a/client/src/components/catalog/selectionList.css
+++ b/client/src/components/catalog/selectionList.css
@@ -37,6 +37,11 @@
 .selection-list li {
 	font-size: 20px;
 }
+@media only screen and (min-width: 320px) {
+	.selection-list {
+		width: 100%;
+	}
+}
 
 @media only screen and (min-width: 768px) {
 	.selection-list {
