--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -3,22 +3,23 @@
 .home-page {
 	background-color: #fff;
 	margin-top: 20px;
-	padding-top: 40px;
+
 }
 
 .home {
 	font-size: 20px;
 	border: none;
 	padding-top: 30px;
-	
+	margin-top: 35px;
 }
 
 .home ol {
 	margin-left: 20px;
 }
 
-@media only screen and (min-width: 775px) {
-	.home-page {
-		padding-top: 40px;
+@media all and (min-width: 320px) and (max-width: 775px)  {
+	.home {
+		padding-top: 10px;
+		margin-top: 10px;
 	}
 }
