--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -2,7 +2,7 @@
 body, html {
   font-size: 20px;
   font-family: 'Lato' sans-serif;
-  background-color: #E9E7DA;
+  background-color: #E9E7DA!important;
 }
 
 
