--- a/client/src/components/auth/login-form.css
+++ b/client/src/components/auth/login-form.css
@@ -73,12 +73,14 @@ body {
 
 #login-form {
   background-color: #fff;
-  margin-bottom: 10px;
   max-width: 600px;
   position: absolute;
   top: 0;
-  margin-top: 0;
+  left: 0;
+  margin: 0 auto;
+
   border: 1px solid brown;
+  border-radius: 5px;
   font-size: 20px;
 }
 
@@ -108,26 +110,26 @@ body {
 
 
 
-@media all screen and (min-width: 575.98px) {
+@media only screen and (min-width: 320px) and (max-width: 767.98px) {
   html, body {
     margin-top: 0;
     padding-top: 0;
-    background-color: #fff;
+    
   }
     #login-form {
     height: 100%;
+    width: 100%;
     position: absolute;
     top:0;
+    left: 0;
     bottom: 0;
+    right: 0;
     border: none;
-
   }
-
 }
 
 
-@media only screen and (min-width: 768px) 
-  and (orientation: portrait) {
+@media only screen and (min-width: 768px) {
   html {
     font-size: 1.4rem;
   }
@@ -137,6 +139,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%); 
   }
+
 }
 
 @media only screen and (min-width: 992px){
