--- a/client/src/components/auth/registration-form.css
+++ b/client/src/components/auth/registration-form.css
@@ -5,6 +5,17 @@
 	margin-top: 5px;
 }
 
+.reg-form {
+  max-width: 600px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid brown;
+}
+
 .program-selection {
 	border: 1px solid brown;
   font-size:18px;
@@ -20,21 +31,14 @@
   padding-right: 15px;
 }
 
-.reg-form {
-  max-width: 600px;
-  background-color: #fff;
-  margin: 10px auto;
-  border-radius: 5px;
-  border: 1px solid brown;
-}
-
-
 .reg-app-header {
   height: 45px;
   display: block;
-  font-size: 30px;
+  font-size: 28px;
   font-weight: bold;
   padding: 0;
+  display: block;
+  text-align: center;
   margin-top: 10px;
   vertical-align: middle;
   color: #4B0082;
@@ -53,15 +57,31 @@ input:focus{
   color: red;
 }
 
+@media only screen and (min-width: 320px) and (max-width: 767.98px) {
+  html, body {
+    margin-top: 0;
+    padding-top: 0;
+    
+  }
+    .reg-form {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border: none;
+  }
+}
 
-@media only screen and (min-width: 768px) 
-  and (orientation: portrait) {
+
+@media only screen and (min-width: 768px) {
   html {
     font-size: 1.4rem;
   }
 
-  .reg-form,
-  .login-form {
+  .reg-form{
     max-width: 600px;
     position: absolute;
     top: 50%;
