--- a/client/src/components/auth/registration-page.css
+++ b/client/src/components/auth/registration-page.css
@@ -1,5 +1,8 @@
-
 #registration-page {
-	max-width: 700px;
-	
+  max-width: 800px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
 }
