--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -180,14 +180,12 @@ select {
   padding: 5px;
 }
 
-li {
+li, a {
   padding: 5px;
-  font-size: 18px;
+  font-size: 20px;
   margin-left: 5px;
   text-align: left;
-
 }
-
 
 @media only screen and (min-width: 320px) {
   .col-2 {
@@ -207,7 +205,7 @@ li {
   }
 }
 
-@media all screen and (min-width: 320px) and (max-width: 775px)  {
+@media only screen and (min-width: 320px) and (max-width: 767.98px)  {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -237,12 +235,21 @@ li {
     display: block;
     text-align: left;
   }
+
+  .app-header a{
+    font-size: 28px;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .app-header a {
+    font-size: 30px;
+  }
 }
 
 .app-header a{
   height: 45px;
   display: block;
-  font-size: 32px;
   padding: 0;
   vertical-align: middle;
   color: #4B0082;
