--- a/client/src/components/auth/registration-page.css
+++ b/client/src/components/auth/registration-page.css
@@ -1,8 +1,39 @@
-#registration-page {
-  max-width: 800px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0 auto;
+
+@media only screen and (min-width: 320px) and (max-width: 767.98px) {
+  html, body {
+    margin-top: 0;
+    padding-top: 0;
+    
+  }
+    #registration-page {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #registration-page{
+    max-width: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+
+}
+
+@media only screen and (min-width: 992px){
+	#registration-page{
+    max-width: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  } 
 }
