added more top padding spacehome

--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -4,13 +4,13 @@
 .home-page {
 	background-color: #fff;
 	margin-top: 20px;
-	padding: 0 20px;
+	padding: 20px;
 }
 
 .home {
 	font-size: 20px;
 	border: none;
-	padding-top: 30px;
+	padding-top: 40px;
 	margin-top: 35px;
 }
 
@@ -20,7 +20,7 @@
 
 @media all and (min-width: 320px) and (max-width: 775px)  {
 	.home {
-		padding-top: 10px;
-		margin-top: 10px;
+		padding-top: 40px;
+		margin-top: 20px;
 	}
 }
