--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -19,6 +19,11 @@
 }
 
 @media all and (min-width: 320px) and (max-width: 775px)  {
+	html, body {
+    	height: 100%;
+    	background-color: #fff;
+  	}
+
 	.home {
 		padding-top: 40px;
 		margin-top: 20px;
